--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
+# SPDX-FileCopyrightText: 2021 Andrey Bienkowski <hexagon-recursion@posteo.net>
+#
+# SPDX-License-Identifier: MIT
+
 .ipynb_checkpoints/
