--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
+# SPDX-FileCopyrightText: 2021 Andrey Bienkowski <hexagon-recursion@posteo.net>
+#
+# SPDX-License-Identifier: MIT
+
 gdd.csv filter=lfs diff=lfs merge=lfs -text
